[tool.poetry]
name = "wismart-backend"
version = "0.1.0"
description = "The backend of WisMart"
authors = ["SilianZ <silian_zheng@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
sqlmodel = "^0.0.22"
apscheduler = "^3.11.0"
bcrypt = "^4.2.1"
httpx = "^0.28.1"
pymysql = "^1.1.1"
cos-python-sdk-v5 = "^1.9.34"
qcloud-python-sts = "^3.1.6"


[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
